--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <title>MINIMO</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700;800;900&family=Ubuntu:wght@300;400;500;700&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700;800;900&family=Ubuntu:wght@300;400;500;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="CSS/style.css">
     <link href="CSS/all.min.css" rel="stylesheet">
+     <link rel="stylesheet" href="CSS/style.css">
+
 
 </head>
 
