--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         </div>
         <div class="right">
-            <img src="images/blog-2.jpg" alt="Image">
+            <img src="Images/blog-2.jpg" alt="Image">
             <h5>lifestyle</h5>
             <h1>Life tastes better with coffee</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
@@ -97,7 +97,7 @@
     <!-- Photodiary Section Start -->
     <section class="blog">
         <div class="left">
-            <img src="images/blog-3.jpg" alt="Image">
+            <img src="Images/blog-3.jpg" alt="Image">
             <h5>photodiary</h5>
             <h1>American dream </h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
@@ -107,7 +107,7 @@
 
         </div>
         <div class="right">
-            <img src="images/blog-4.jpg" alt="Image">
+            <img src="Images/blog-4.jpg" alt="Image">
             <h5>photodiary</h5>
             <h1>A day exploring the Alps</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
@@ -132,7 +132,7 @@
     <!-- Photodiary Section Start -->
     <section class="blog">
         <div class="left">
-            <img src="images/blog-5.jpg" alt="Image">
+            <img src="Images/blog-5.jpg" alt="Image">
             <h5>lifestyle</h5>
             <h1>Top 10 song for running </h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
@@ -142,7 +142,7 @@
 
         </div>
         <div class="right">
-            <img src="images/blog-6.jpg" alt="Image">
+            <img src="Images/blog-6.jpg" alt="Image">
             <h5>lifestyle</h5>
             <h1>Cold winter days</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
