--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <!-- Lifestyle Section Start -->
     <section class="blog">
         <div class="left">
-            <img src="images/blog-01.jpg" alt="Image">
+            <img src="Images/blog-01.jpg" alt="Image">
             <h5>Lifestyle</h5>
             <h1>More than just a music festival </h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
