--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
         </div>
         <div class="right">
-            <img src="Images/blog-6.jpg" alt="Image">
+            <img src="Images/Blog-6.jpg" alt="Image">
             <h5>lifestyle</h5>
             <h1>Cold winter days</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
